# Assignment_dev

./: CMakeLists.txt  README.md
.github/workflows/: all_project.yml  can_message.yml  file_io.yml
CAN_Messages/: CMakeLists.txt  file_IO.py  min_signals.json
CAN_Messages/output/include/can_messages/: CAN_min_signals.h
CAN_Messages/output/src/: min_signals.cpp
file_io/: CMakeLists.txt
file_io/app/src/: maintest.cpp
file_io/lib/include/: project.h
file_io/lib/src/: project.cpp
main_component/: CMakeLists.txt
main_component/src/: main.cpp
